--- a/map.html
+++ b/map.html
@@ -24,8 +24,7 @@
 <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 
 <script src="https://maps.googleapis.com/maps/api/js?key=_____&libraries=visualization"></script>
-<!--<script src="map2.js" onload="initMap()"></script>-->
-<script src="map2.js" onload="initMap()"></script>
+<script src="map.js" onload="initMap()"></script>
 </body>
 </html>
 
